tests/samples/import-same-path/error.full.txt
A template shouldn't import itself, "'./template.blate'" found on line 2 at index 10.

1|// error: import same path
2|{@import './template.blate' context}
           ^
3|

File: /mnt/Emile/silassare/blate/src/Exceptions/Traits/BlateExceptionTrait.php
Line: 56
#0 /mnt/Emile/silassare/blate/src/Features/BlockImport.php(52): Blate\Exceptions\BlateRuntimeException::withToken()
#1 /mnt/Emile/silassare/blate/src/Parser.php(162): Blate\Features\BlockImport->onOpen()
#2 /mnt/Emile/silassare/blate/src/Parser.php(86): Blate\Parser->blockOpen()
#3 /mnt/Emile/silassare/blate/src/Blate.php(143): Blate\Parser->parse()
#4 /mnt/Emile/silassare/blate/tests/TemplateSyntaxTest.php(261): Blate\Blate->parse()
#5 /mnt/Emile/silassare/blate/tests/TemplateSyntaxTest.php(169): Blate\Tests\TemplateSyntaxTest->runInvalid()
#6 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/Framework/TestCase.php(1545): Blate\Tests\TemplateSyntaxTest->testImportSamePath()
#7 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/Framework/TestCase.php(1151): PHPUnit\Framework\TestCase->runTest()
#8 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/Framework/TestResult.php(726): PHPUnit\Framework\TestCase->runBare()
#9 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/Framework/TestCase.php(903): PHPUnit\Framework\TestResult->run()
#10 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/Framework/TestSuite.php(677): PHPUnit\Framework\TestCase->run()
#11 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/Framework/TestSuite.php(677): PHPUnit\Framework\TestSuite->run()
#12 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/Framework/TestSuite.php(677): PHPUnit\Framework\TestSuite->run()
#13 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/TextUI/TestRunner.php(673): PHPUnit\Framework\TestSuite->run()
#14 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/TextUI/Command.php(143): PHPUnit\TextUI\TestRunner->run()
#15 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/TextUI/Command.php(96): PHPUnit\TextUI\Command->run()
#16 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/phpunit(98): PHPUnit\TextUI\Command::main()
#17 {main}